# telco-churn-end-to-end-ml

./: .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  environment.yml  pyproject.toml
configs/: config.yaml
notebooks/: 01_eda.ipynb
src/data/: load_data.py
