[project]
name = "telco-churn-end-to-end-ml"
version = "0.1.0"
description = "End-to-end ML project for predicting telco customer churn"
readme = "README.md"
requires-python = ">=3.11"

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
# E = pycodestyle errors (stil hataları)
# F = pyflakes (kullanılmayan import, tanımsız değişken)
# I = isort (import sıralaması)
# W = pycodestyle warnings

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"
# -v = verbose (detaylı çıktı)
# --tb=short = hata mesajlarını kısa göster
